# ezan

./: CITATION.cff  CONTRIBUTING.md  README.md  meta.yaml  noxfile.py  pixi.toml  pyproject.toml  recipe.yaml  requirements.txt  setup.cfg  setup.py  tox.ini  tox.toml
.github/workflows/: workflow.yml
ezan/: __init__.py  _version.py  ezan.py
ezan/.ipynb_checkpoints/: __init__-checkpoint.py  _version-checkpoint.py
notebook/: ezan.ipynb
recipe/: meta.yaml
