## `pyproject.toml`

[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezan"
version = "0.1.0"
description = "Namaz vakitleri ve kıble hesaplama aracı"
readme = "README.md"
authors = [
    {name = "Mehmet Keçeci", email = "mkececi@yaani.com"},
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "pytz>=2025.2",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/WhiteSymmetry/ezan"
Repository = "https://github.com/WhiteSymmetry/ezan.git"
[dependency-groups]
build = [
    "setuptools (>=82.0.0,<83.0.0)",
    "cython (>=3.2.4,<4.0.0)"
]
